chore(javacpp): fix android compatibility in record classes